Carousel caption no longer stacks when lower than 480px.
This rule isn't needed as we don't want the caption to stack on
small screens, we still want it to overlap the image.

This shouldn't affect any other parts of the page as until now,
the carousel wasn't actually visible on screens smaller than ~780
pixels anyway.

--- a/less/responsive.less
+++ b/less/responsive.less
@@ -210,11 +210,6 @@
     padding: 10px;
     margin: -10px;
   }
-
-// Carousel
-  .carousel-caption {
-    position: static;
-  }
 }
 
 
